tests/samples/negative/control_flow/break_outside_loop.ax
module break_outside_loop;

fn main() -> i32 {
    break;
    return 0;
}
